cf-templates/ext-nat-transit-gateway-vpc.yml
Description: >
    This template deploys the EXT-NAT-VPC & its components
    Author: Soumya Mohanty <soumya.mohanty@pb.com>
Parameters:
  environment:
    Type: String
  costCenter:
    Type: String
  techContact:
    Type: String
  product:
    Type: String
  regionIata:
    Type: String
  EXTNATCIDR:
    Description: CIDR address block for the VPC
    Type: String
  EXTNATPublicCidrBlock1:
    Description: The IP address range for Public Subnet 1
    Type: String
  PublicSubnet1AZ:
    Description: The AZ for Public Subnet 1
    Type: AWS::EC2::AvailabilityZone::Name
  EXTNATPublicCidrBlock2:
    Description: The IP address range for Public Subnet 2
    Type: String
  PublicSubnet2AZ:
    Description: The AZ for Public Subnet 2
    Type: AWS::EC2::AvailabilityZone::Name
  EXTNATPrivateCidrBlock1:
    Description: The IP address range for Private Subnet 1
    Type: String
  PrivateSubnet1AZ:
    Description: The AZ for Private Subnet 1
    Type: AWS::EC2::AvailabilityZone::Name
  EXTNATPrivateCidrBlock2:
    Description: The IP address range for Private Subnet 2
    Type: String
  PrivateSubnet2AZ:
    Description: The AZ Private Subnet 2
    Type: AWS::EC2::AvailabilityZone::Name

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: EXTNATCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, vpc ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key: !Join ["-", ["Associate-with-ext-nat", Ref: "environment"]]
        Value: !Join ["-", ["ext-nat-ext-nat-tgw", Ref: "environment", "rtb"]]
      - Key: !Join ["-", ["Propagate-to-ext-nat", Ref: "environment"]]
        Value: !Join ["", ["int-nat-ext-nat-tgw", "-", Ref: "environment", "-", "rtb", ",", "app-ext-nat-tgw", "-", Ref: "environment", "-", "rtb"]]
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: EXTNATPublicCidrBlock1
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Ref: PublicSubnet1AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pub1 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: EXTNATPublicCidrBlock2
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Ref: PublicSubnet2AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pub2 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, igw ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  NAT1:
    DependsOn: AttachGateway
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIP1
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1
  NAT2:
    DependsOn: AttachGateway
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIP2
        - AllocationId
      SubnetId:
        Ref: PublicSubnet2
  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pub ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable
  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable
  PublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pub-acl ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PublicSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      NetworkAclId:
        Ref: PublicNetworkAcl
  PublicSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      NetworkAclId:
        Ref: PublicNetworkAcl
  PrivateSubnet1:
    DependsOn: PrivateNATRouteTableAssociation1
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: EXTNATPrivateCidrBlock1
      AvailabilityZone:
        Ref: PrivateSubnet1AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pri1 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key : !Join ["-", ["Attach-to-ext-nattgw", Ref: "environment"]]
        Value: ''
  PrivateSubnet2:
    DependsOn: PrivateNATRouteTableAssociation2
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: EXTNATPrivateCidrBlock2
      AvailabilityZone:
        Ref: PrivateSubnet2AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pri2 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key : !Join ["-", ["Attach-to-ext-nattgw", Ref: "environment"]]
        Value: ''
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pri-1 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pri-2 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      RouteTableId:
        Ref: PrivateRouteTable1
  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      RouteTableId:
        Ref: PrivateRouteTable2
  PrivateNATRouteTableAssociation1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT1
  PrivateNATRouteTableAssociation2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT2
  PrivateNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, ext, nat, transit, pri-acl ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PrivateSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      NetworkAclId:
        Ref: PrivateNetworkAcl
  PrivateSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      NetworkAclId:
        Ref: PrivateNetworkAcl
  NetworkAclEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PublicNetworkAcl
  NetworkAclEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PublicNetworkAcl
  NetworkAclEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PrivateNetworkAcl
  NetworkAclEntry4:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PrivateNetworkAcl
  
Outputs:
  VPCId:
    Description: VPCId of the newly created VPC
    Value:
      Ref: VPC
  PublicSubnet1Id:
    Description: SubnetId of the public subnet 1
    Value:
      Ref: PublicSubnet1
  PublicSubnet2Id:
    Description: SubnetId of the public subnet 2
    Value:
      Ref: PublicSubnet2
  PrivateSubnet1Id:
    Description: SubnetId of the private subnet 1
    Value:
      Ref: PrivateSubnet1
  PrivateSubnet2Id:
    Description: SubnetId of the private subnet 2
    Value:
      Ref: PrivateSubnet2
  PublicRouteTable:
    Value:
      Ref: PublicRouteTable
  PrivateRouteTable1:
    Value:
      Ref: PrivateRouteTable1
  PrivateRouteTable2:
    Value:
      Ref: PrivateRouteTable2
  NAT1:
    Value:
      Ref: NAT1
  NAT2:
    Value:
      Ref: NAT2
  EXTNATCIDR:
    Description: VPC CIDR
    Value:
      Ref: EXTNATCIDR
