cf-templates/int-nat-transit-gateway-vpc.yml
Description: >
    This template deploys the INT-NAT-VPC & its components
    Author: Soumya Mohanty <soumya.mohanty@pb.com>
Parameters:
  environment:
    Type: String
  costCenter:
    Type: String
  techContact:
    Type: String
  product:
    Type: String
  regionIata:
    Type: String
  INTNATCIDR:
    Description: CIDR address block for the VPC
    Type: String
  INTNATPublicCidrBlock1:
    Description: The IP address range for Public Subnet 1
    Type: String
  PublicSubnet1AZ:
    Description: The AZ for Public Subnet 1
    Type: AWS::EC2::AvailabilityZone::Name
  INTNATPublicCidrBlock2:
    Description: The IP address range for Public Subnet 2
    Type: String
  PublicSubnet2AZ:
    Description: The AZ for Public Subnet 2
    Type: AWS::EC2::AvailabilityZone::Name
  INTNATPrivateCidrBlock1:
    Description: The IP address range for Private Subnet 1
    Type: String
  PrivateSubnet1AZ:
    Description: The AZ for Private Subnet 1
    Type: AWS::EC2::AvailabilityZone::Name
  INTNATPrivateCidrBlock2:
    Description: The IP address range for Private Subnet 2
    Type: String
  PrivateSubnet2AZ:
    Description: The AZ Private Subnet 2
    Type: AWS::EC2::AvailabilityZone::Name
    
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: INTNATCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, vpc ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key: !Join ["-", ["Associate-with-ext-nat", Ref: "environment"]]
        Value: !Join ["-", ["int-nat-ext-nat-tgw", Ref: "environment", "rtb"]]
      - Key: !Join ["-", ["Propagate-to-ext-nat", Ref: "environment"]]
        Value: !Join ["-", ["ext-nat-ext-nat-tgw", Ref: "environment", "rtb"]]
      - Key: !Join ["-", ["Associate-with-int-nat", Ref: "environment"]]
        Value: !Join ["-", ["int-nat-int-nat-tgw", Ref: "environment", "rtb"]]
      - Key: !Join ["-", ["Propagate-to-int-nat", Ref: "environment"]]
        Value: !Join ["-", ["app-int-nat-tgw", Ref: "environment", "rtb"]]
      
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: INTNATPublicCidrBlock1
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Ref: PublicSubnet1AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pub1 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key: !Join ["-", ["Attach-to-ext-nattgw", Ref: "environment"]]
        Value: ''
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: INTNATPublicCidrBlock2
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Ref: PublicSubnet2AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pub2 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key: !Join ["-", ["Attach-to-ext-nattgw", Ref: "environment"]]
        Value: ''
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, nat, transit, igw ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: 
    - PublicSubnet1
    - PublicSubnet2
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pub ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: PublicRouteTable
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable
  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: PublicRouteTable
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable
  PublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pub-acl ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PublicSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: PublicNetworkAcl
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      NetworkAclId:
        Ref: PublicNetworkAcl
  PublicSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: PublicNetworkAcl
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      NetworkAclId:
        Ref: PublicNetworkAcl
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: INTNATPrivateCidrBlock1
      AvailabilityZone:
        Ref: PrivateSubnet1AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pri1 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key: !Join ["-", ["Attach-to-int-nattgw", Ref: "environment"]]
        Value: '' 
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: INTNATPrivateCidrBlock2
      AvailabilityZone:
        Ref: PrivateSubnet2AZ
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pri2 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
      - Key: !Join ["-", ["Attach-to-int-nattgw", Ref: "environment"]]
        Value: ''
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pri-1 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pri-2 ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
    - PrivateSubnet1
    - PrivateRouteTable1
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      RouteTableId:
        Ref: PrivateRouteTable1
  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
    - PrivateSubnet2
    - PrivateRouteTable2
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      RouteTableId:
        Ref: PrivateRouteTable2
  PrivateNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, transit, pri-acl ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  PrivateSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: PrivateNetworkAcl
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      NetworkAclId:
        Ref: PrivateNetworkAcl
  PrivateSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: PrivateNetworkAcl
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      NetworkAclId:
        Ref: PrivateNetworkAcl
  NetworkAclEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PublicNetworkAcl
  NetworkAclEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PublicNetworkAcl
  NetworkAclEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PrivateNetworkAcl
  NetworkAclEntry4:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PrivateNetworkAcl
  MyVPNGateway: 
    Type: AWS::EC2::VPNGateway
    DependsOn: VPC
    Properties:
      Type: ipsec.1
      Tags:
      - Key: Name
        Value: !Join [ '-', [ !Ref product, !Ref regionIata, !Ref environment, int, nat, vgw ] ]
      - Key: costcenter
        Value: !Ref costCenter
      - Key: techcontact
        Value: !Ref techContact
  AttachVpnGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      VpnGatewayId:
        Ref: MyVPNGateway
  VPNGatewayPropagation:
    Type: AWS::EC2::VPNGatewayRoutePropagation
    DependsOn: 
    - MyVPNGateway
    - AttachVpnGateway
    Properties:
      RouteTableIds: 
        - Ref: PublicRouteTable
      VpnGatewayId: 
        Ref: MyVPNGateway
  NAT1:
    Type: AWS::EC2::NatGateway
    DependsOn: 
    - VPNGatewayPropagation
    - EIP1
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIP1
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1
  NAT2:
    Type: AWS::EC2::NatGateway
    DependsOn: 
    - VPNGatewayPropagation
    - EIP2
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIP2
        - AllocationId
      SubnetId:
        Ref: PublicSubnet2
  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  PrivateNATRouteTableAssociation1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT1
  PrivateNATRouteTableAssociation2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT2
  
Outputs:
  VPCId:
    Description: VPCId of the newly created VPC
    Value:
      Ref: VPC
  PublicSubnet1Id:
    Description: SubnetId of the public subnet 1
    Value:
      Ref: PublicSubnet1
  PublicSubnet2Id:
    Description: SubnetId of the public subnet 2
    Value:
      Ref: PublicSubnet2
  PrivateSubnet1Id:
    Description: SubnetId of the private subnet 1
    Value:
      Ref: PrivateSubnet1
  PrivateSubnet2Id:
    Description: SubnetId of the private subnet 2
    Value:
      Ref: PrivateSubnet2
  PublicRouteTable:
    Value:
      Ref: PublicRouteTable
  PrivateRouteTable1:
    Value:
      Ref: PrivateRouteTable1
  PrivateRouteTable2:
    Value:
      Ref: PrivateRouteTable2
  NAT1:
    Value:
      Ref: NAT1
  NAT2:
    Value:
      Ref: NAT2
  INTNATCIDR:
    Description: VPC CIDR
    Value:
      Ref: INTNATCIDR
